// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merge Nothing 1`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Merge Nothing 2`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Merge One way delCell 1`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              284112242,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              2311787809,
            ],
          },
          2038672141,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              2311787809,
            ],
          },
          3488783888,
        ],
      },
      419545430,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  419545430,
]
`;

exports[`Merge One way delRow 1`] = `
[
  "Hc2DO@000038DKS9",
  [
    [
      "Hc2DO@000038DKS9",
      {
        "t1": [
          "Hc2DO@000038DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              284112242,
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              2201612259,
            ],
          },
          3435653238,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              2311787809,
            ],
          },
          3488783888,
        ],
      },
      1131541991,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1131541991,
]
`;

exports[`Merge One way delTable 1`] = `
[
  "Hc2DO@000048DKS9",
  [
    [
      "Hc2DO@000048DKS9",
      {
        "t1": [
          "Hc2DO@000038DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              284112242,
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              2201612259,
            ],
          },
          3435653238,
        ],
        "t2": [
          "Hc2DO@000048DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              4053907917,
            ],
          },
          1085306887,
        ],
      },
      3830531581,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3830531581,
]
`;

exports[`Merge One way delTables 1`] = `
[
  "Hc2DO@000068DKS9",
  [
    [
      "Hc2DO@000068DKS9",
      {
        "t1": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000068DKS9",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              1802329738,
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              2201612259,
            ],
          },
          1958915000,
        ],
        "t2": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              4053907917,
            ],
            "r2": [
              "Hc2DO@000068DKS9",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
              },
              3328656160,
            ],
          },
          3331898626,
        ],
      },
      1487413994,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1487413994,
]
`;

exports[`Merge One way delValue 1`] = `
[
  "Hc2DO@000098DKS9",
  [
    [
      "Hc2DO@000068DKS9",
      {
        "t1": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000068DKS9",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              1802329738,
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              2201612259,
            ],
          },
          1958915000,
        ],
        "t2": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              4053907917,
            ],
            "r2": [
              "Hc2DO@000068DKS9",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
              },
              3328656160,
            ],
          },
          3331898626,
        ],
      },
      1487413994,
    ],
    [
      "Hc2DO@000098DKS9",
      {
        "v1": [
          "Hc2DO@000088DKS9",
          1,
          1209068807,
        ],
        "v2": [
          "Hc2DO@000098DKS9",
          undefined,
          1159821978,
        ],
      },
      1921093339,
    ],
  ],
  707374129,
]
`;

exports[`Merge One way delValues 1`] = `
[
  "Hc2DO@0000:8DKS9",
  [
    [
      "Hc2DO@000068DKS9",
      {
        "t1": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000068DKS9",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              1802329738,
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              2201612259,
            ],
          },
          1958915000,
        ],
        "t2": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              4053907917,
            ],
            "r2": [
              "Hc2DO@000068DKS9",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
              },
              3328656160,
            ],
          },
          3331898626,
        ],
      },
      1487413994,
    ],
    [
      "Hc2DO@0000:8DKS9",
      {
        "v1": [
          "Hc2DO@0000:8DKS9",
          undefined,
          4067122285,
        ],
        "v2": [
          "Hc2DO@000098DKS9",
          undefined,
          1159821978,
        ],
      },
      1024115232,
    ],
  ],
  1705173194,
]
`;

exports[`Merge One way setCell 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              1148302086,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              2311787809,
            ],
          },
          2815901277,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              2311787809,
            ],
          },
          3488783888,
        ],
      },
      957968817,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  957968817,
]
`;

exports[`Merge One way setCell 2 1`] = `
[
  "Hc2DO@000058DKS9",
  [
    [
      "Hc2DO@000058DKS9",
      {
        "t1": [
          "Hc2DO@000038DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              284112242,
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              2201612259,
            ],
          },
          3435653238,
        ],
        "t2": [
          "Hc2DO@000058DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              4053907917,
            ],
            "r2": [
              "Hc2DO@000058DKS9",
              {
                "c2": [
                  "Hc2DO@000058DKS9",
                  2,
                  2818632457,
                ],
              },
              227051779,
            ],
          },
          42116843,
        ],
      },
      1483802621,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1483802621,
]
`;

exports[`Merge One way setTables 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              2272266658,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              2311787809,
            ],
          },
          374710841,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              2311787809,
            ],
          },
          3488783888,
        ],
      },
      3987637125,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3987637125,
]
`;

exports[`Merge One way setValue 1`] = `
[
  "Hc2DO@000088DKS9",
  [
    [
      "Hc2DO@000068DKS9",
      {
        "t1": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000068DKS9",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              1802329738,
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              2201612259,
            ],
          },
          1958915000,
        ],
        "t2": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              4053907917,
            ],
            "r2": [
              "Hc2DO@000068DKS9",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
              },
              3328656160,
            ],
          },
          3331898626,
        ],
      },
      1487413994,
    ],
    [
      "Hc2DO@000088DKS9",
      {
        "v1": [
          "Hc2DO@000088DKS9",
          1,
          1209068807,
        ],
        "v2": [
          "Hc2DO@000078DKS9",
          0,
          1524959021,
        ],
      },
      1918879451,
    ],
  ],
  720888881,
]
`;

exports[`Merge One way setValues 1`] = `
[
  "Hc2DO@000078DKS9",
  [
    [
      "Hc2DO@000068DKS9",
      {
        "t1": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000068DKS9",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              1802329738,
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              2201612259,
            ],
          },
          1958915000,
        ],
        "t2": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              4053907917,
            ],
            "r2": [
              "Hc2DO@000068DKS9",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
              },
              3328656160,
            ],
          },
          3331898626,
        ],
      },
      1487413994,
    ],
    [
      "Hc2DO@000078DKS9",
      {
        "v1": [
          "Hc2DO@000078DKS9",
          0,
          1524959021,
        ],
        "v2": [
          "Hc2DO@000078DKS9",
          0,
          1524959021,
        ],
      },
      3045704149,
    ],
  ],
  3978421055,
]
`;

exports[`Merge Two way Causality 1`] = `
[
  "Hc2DO@000035DK@@",
  [
    [
      "Hc2DO@000025DK@@",
      {
        "t1": [
          "Hc2DO@000025DK@@",
          {
            "r1": [
              "Hc2DO@000025DK@@",
              {
                "c1": [
                  "Hc2DO@000025DK@@",
                  2,
                  3667222557,
                ],
              },
              3451919996,
            ],
          },
          1216703289,
        ],
      },
      1912372636,
    ],
    [
      "Hc2DO@000035DK@@",
      {
        "v1": [
          "Hc2DO@000035DK@@",
          2,
          2861658760,
        ],
      },
      2708739357,
    ],
  ],
  3498600577,
]
`;

exports[`Merge Two way Causality 2`] = `
[
  "Hc2DO@000058DKS9",
  [
    [
      "Hc2DO@000048DKS9",
      {
        "t1": [
          "Hc2DO@000048DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  3,
                  2480417845,
                ],
              },
              1712940971,
            ],
          },
          1513991,
        ],
      },
      1306688407,
    ],
    [
      "Hc2DO@000058DKS9",
      {
        "v1": [
          "Hc2DO@000058DKS9",
          3,
          895933976,
        ],
      },
      3110667350,
    ],
  ],
  4102782913,
]
`;

exports[`Merge Two way Conflict 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v0": [
          "Hc2DO@000018DKS9",
          0,
          1811946515,
        ],
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      3220353420,
    ],
  ],
  1335458839,
]
`;

exports[`Merge Two way Conflict 2`] = `
[
  "Hc2DO@100015DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c1": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              4004729339,
            ],
          },
          3649130009,
        ],
      },
      2754557355,
    ],
    [
      "Hc2DO@100015DK@@",
      {
        "v1": [
          "Hc2DO@100015DK@@",
          2,
          2724740231,
        ],
      },
      1600984299,
    ],
  ],
  4215415104,
]
`;

exports[`Merge Two way Conflict 3`] = `
[
  "Hc2DO@100015DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c1": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              4004729339,
            ],
          },
          3649130009,
        ],
      },
      2754557355,
    ],
    [
      "Hc2DO@100015DK@@",
      {
        "v0": [
          "Hc2DO@000018DKS9",
          0,
          1811946515,
        ],
        "v1": [
          "Hc2DO@100015DK@@",
          2,
          2724740231,
        ],
      },
      1876136196,
    ],
  ],
  3422332079,
]
`;

exports[`Merge Two way Interleaving 1`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@200008DKS9",
      {
        "t1": [
          "Hc2DO@200008DKS9",
          {
            "r1": [
              "Hc2DO@200008DKS9",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  undefined,
                  570947733,
                ],
              },
              1230194267,
            ],
          },
          1008758195,
        ],
      },
      2272338042,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2272338042,
]
`;

exports[`Merge Two way Interleaving 2`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              140652553,
            ],
          },
          3351758243,
        ],
      },
      2930473505,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2930473505,
]
`;

exports[`Merge Two way Mutually exclusive tables & values 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  2133326328,
]
`;

exports[`Merge Two way Mutually exclusive tables & values 2`] = `
[
  "Hc2DO@100015DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              140652553,
            ],
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              140652553,
            ],
          },
          2400251703,
        ],
        "t2": [
          "Hc2DO@100005DK@@",
          {
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              140652553,
            ],
          },
          2770261118,
        ],
      },
      2890591112,
    ],
    [
      "Hc2DO@100015DK@@",
      {
        "v2": [
          "Hc2DO@100015DK@@",
          2,
          2724740231,
        ],
      },
      4190784181,
    ],
  ],
  1434493245,
]
`;

exports[`Merge Two way Mutually exclusive tables & values 3`] = `
[
  "Hc2DO@100015DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              3406116407,
            ],
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              140652553,
            ],
          },
          385702800,
        ],
        "t2": [
          "Hc2DO@100005DK@@",
          {
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              140652553,
            ],
          },
          2770261118,
        ],
      },
      981583737,
    ],
    [
      "Hc2DO@100015DK@@",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
        "v2": [
          "Hc2DO@100015DK@@",
          2,
          2724740231,
        ],
      },
      3814396075,
    ],
  ],
  3654997970,
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              2311787809,
            ],
          },
          3488783888,
        ],
      },
      3306754367,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3306754367,
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 2`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@100005DK@@",
      {
        "v1": [
          "Hc2DO@100005DK@@",
          0,
          3183766124,
        ],
      },
      188771937,
    ],
  ],
  188771937,
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 3`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              2311787809,
            ],
          },
          3488783888,
        ],
      },
      3306754367,
    ],
    [
      "Hc2DO@100005DK@@",
      {
        "v1": [
          "Hc2DO@100005DK@@",
          0,
          3183766124,
        ],
      },
      188771937,
    ],
  ],
  3461971806,
]
`;

exports[`apply/setMergeableContent apply into empty store 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`apply/setMergeableContent apply over existing content 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
              },
              192970134,
            ],
          },
          4186037739,
        ],
      },
      3007071579,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v0": [
          "Hc2DO@000008DKS9",
          0,
          2614692414,
        ],
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      505723254,
    ],
  ],
  2904095789,
]
`;

exports[`apply/setMergeableContent set into empty store 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`apply/setMergeableContent set over existing content 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
              },
              1254797189,
            ],
          },
          423436526,
        ],
      },
      639574078,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  2840794205,
]
`;

exports[`apply/setMergeableContent set over existing content 2`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              3989545924,
            ],
          },
          2435813342,
        ],
      },
      2628239271,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  334203844,
]
`;

exports[`apply/setMergeableContent set with wrong hashes 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  1,
                ],
              },
              2,
            ],
          },
          3,
        ],
      },
      4,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          5,
        ],
      },
      6,
    ],
  ],
  7,
]
`;

exports[`getMergeableContent Empty transaction 1`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`getMergeableContent Initialize 1`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`getMergeableContent Mutate 1`] = `
[
  "Hc2DO@000068DKS9",
  [
    [
      "Hc2DO@000048DKS9",
      {
        "t1": [
          "Hc2DO@000038DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              284112242,
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              2201612259,
            ],
          },
          3435653238,
        ],
        "t2": [
          "Hc2DO@000048DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              4053907917,
            ],
          },
          1085306887,
        ],
      },
      3830531581,
    ],
    [
      "Hc2DO@000068DKS9",
      {
        "v1": [
          "Hc2DO@000058DKS9",
          5,
          3265694938,
        ],
        "v2": [
          "Hc2DO@000068DKS9",
          undefined,
          1646436633,
        ],
      },
      3596352019,
    ],
  ],
  839565294,
]
`;

exports[`getMergeableContent Set in sequence 1`] = `
[
  "Hc2DO@000058DKS9",
  [
    [
      "Hc2DO@000038DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
                "c2": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
              },
              4220223298,
            ],
            "r2": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          3331060598,
        ],
        "t2": [
          "Hc2DO@000038DKS9",
          {
            "r1": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  3,
                  4033202406,
                ],
              },
              1858312085,
            ],
          },
          2276520504,
        ],
      },
      3257932459,
    ],
    [
      "Hc2DO@000058DKS9",
      {
        "v1": [
          "Hc2DO@000048DKS9",
          4,
          4189032886,
        ],
        "v2": [
          "Hc2DO@000058DKS9",
          5,
          3265694938,
        ],
      },
      3355929235,
    ],
  ],
  171405368,
]
`;

exports[`getMergeableContent Set together 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1474233545,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              1114066298,
            ],
          },
          1539544661,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  3,
                  2609181593,
                ],
              },
              732979010,
            ],
          },
          3590419266,
        ],
      },
      2620828010,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          4,
          4060269138,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          5,
          2123438739,
        ],
      },
      2646965375,
    ],
  ],
  32757013,
]
`;

exports[`getMergeableContentDelta Both empty 1`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`getMergeableContentDelta Both match 1`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`getMergeableContentDelta No match remote empty 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
        ],
      },
    ],
  ],
]
`;

exports[`getMergeableContentDelta No match remote missing cell 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "",
                  undefined,
                ],
                "c2": [
                  "000000000008DKS9",
                  2,
                ],
              },
            ],
            "r2": [
              "",
              {},
            ],
          },
        ],
        "t2": [
          "",
          {},
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`getMergeableContentDelta No match remote missing row 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "",
              {},
            ],
            "r2": [
              "000000000008DKS9",
              {
                "c2": [
                  "000000000008DKS9",
                  2,
                ],
              },
            ],
          },
        ],
        "t2": [
          "",
          {},
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`getMergeableContentDelta No match remote missing some values 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "",
      {},
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "",
          undefined,
        ],
        "v2": [
          "000000000008DKS9",
          2,
        ],
      },
    ],
  ],
]
`;

exports[`getMergeableContentDelta No match remote missing table 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "",
          {},
        ],
        "t2": [
          "000000000008DKS9",
          {
            "r2": [
              "000000000008DKS9",
              {
                "c2": [
                  "000000000008DKS9",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`getMergeableContentDelta No match remote missing tables 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "000000000008DKS9",
      {
        "t1": [
          "000000000008DKS9",
          {
            "r1": [
              "000000000008DKS9",
              {
                "c1": [
                  "000000000008DKS9",
                  1,
                ],
                "c2": [
                  "000000000008DKS9",
                  2,
                ],
              },
            ],
            "r2": [
              "000000000008DKS9",
              {
                "c2": [
                  "000000000008DKS9",
                  2,
                ],
              },
            ],
          },
        ],
        "t2": [
          "000000000008DKS9",
          {
            "r2": [
              "000000000008DKS9",
              {
                "c2": [
                  "000000000008DKS9",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`getMergeableContentDelta No match remote missing values 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "",
      {},
    ],
    [
      "000000000008DKS9",
      {
        "v1": [
          "000000000008DKS9",
          1,
        ],
        "v2": [
          "000000000008DKS9",
          2,
        ],
      },
    ],
  ],
]
`;

exports[`getTransactionMergeableChanges After two transactions 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t0": [
          "Hc2DO@000008DKS9",
          {
            "r0": [
              "Hc2DO@000008DKS9",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              3462856275,
            ],
          },
          1034923531,
        ],
      },
      1374923724,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1374923724,
]
`;

exports[`getTransactionMergeableChanges After two transactions 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t0": [
          "Hc2DO@000008DKS9",
          {
            "r0": [
              "Hc2DO@000008DKS9",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              3462856275,
            ],
          },
          1034923531,
        ],
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
              },
              1254797189,
            ],
          },
          423436526,
        ],
      },
      4173375410,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4173375410,
]
`;
